use /contingency-lists/count to perform a single rest call (#78)
Signed-off-by: David BRAQUART <david.braquart@rte-france.com>