@@ -28,7 +28,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
 
@@ -131,7 +130,7 @@ public class SensitivityAnalysisService {
     public List<String> getProviders() {
         return SensitivityAnalysisProvider.findAll().stream()
                 .map(SensitivityAnalysisProvider::getName)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Long getFactorsCount(SensitivityFactorsIdsByGroup factorIds, UUID networkUuid, String variantId, Boolean isInjectionsSet) {
@@ -148,7 +147,7 @@ public class SensitivityAnalysisService {
         Map<String, List<UUID>> ids = factorIds.getIds();
         long contAttributesCountTemp = 1L;
         if (ids.containsKey(CONTINGENCIES) && !ids.get(CONTINGENCIES).isEmpty()) {
-            int sumContingencyListSizes = getContingenciesCount(ids.get(CONTINGENCIES), networkUuid, variantId);
+            int sumContingencyListSizes = actionsService.getContingencyCount(ids.get(CONTINGENCIES), networkUuid, variantId);
             sumContingencyListSizes = Math.max(sumContingencyListSizes, 1);
             contAttributesCountTemp *= sumContingencyListSizes;
             ids.remove(CONTINGENCIES);
@@ -162,12 +161,6 @@ public class SensitivityAnalysisService {
         }
 
         return contAttributesCountTemp;
-    }
-
-    private Integer getContingenciesCount(List<UUID> ids, UUID networkUuid, String variantId) {
-        return ids.stream()
-                .mapToInt(uuid -> actionsService.getContingencyList(uuid, networkUuid, variantId).size())
-                .sum();
     }
 
     public String getDefaultProvider() {
